--- a/deep-scan-window.html
+++ b/deep-scan-window.html
@@ -306,7 +306,7 @@
 
                     <!-- 扫描结果显示区域（保持 ID 不变） -->
                     <div class="result-category" id="absoluteApisResult" style="display: none;">
-                        <h3>🔗 绝对路径API (<span id="absoluteApisCount">0</span>)</h3>
+                        <h3>绝对路径API (<span id="absoluteApisCount">0</span>)</h3>
                         <ul class="result-list" id="absoluteApisList"></ul>
                         <div class="load-more-container" id="absoluteApisLoadMore" style="display: none;">
                             <button class="load-more-btn" onclick="loadMoreResults('absoluteApis')">
@@ -316,162 +316,162 @@
                     </div>
 
                     <div class="result-category" id="relativeApisResult" style="display: none;">
-                        <h3>🔗 相对路径API (<span id="relativeApisCount">0</span>)</h3>
+                        <h3>相对路径API (<span id="relativeApisCount">0</span>)</h3>
                         <ul class="result-list" id="relativeApisList"></ul>
                     </div>
 
                     <div class="result-category" id="modulePathsResult" style="display: none;">
-                        <h3>📦 模块路径 (<span id="modulePathsCount">0</span>)</h3>
+                        <h3>模块路径 (<span id="modulePathsCount">0</span>)</h3>
                         <ul class="result-list" id="modulePathsList"></ul>
                     </div>
 
                     <div class="result-category" id="domainsResult" style="display: none;">
-                        <h3>🏠 域名 (<span id="domainsCount">0</span>)</h3>
+                        <h3>域名 (<span id="domainsCount">0</span>)</h3>
                         <ul class="result-list" id="domainsList"></ul>
                     </div>
 
                     <div class="result-category" id="urlsResult" style="display: none;">
-                        <h3>🌐 完整URL (<span id="urlsCount">0</span>)</h3>
+                        <h3>完整URL (<span id="urlsCount">0</span>)</h3>
                         <ul class="result-list" id="urlsList"></ul>
                     </div>
 
                     <div class="result-category" id="imagesResult" style="display: none;">
-                        <h3>🖼️ 图片文件 (<span id="imagesCount">0</span>)</h3>
+                        <h3>图片文件 (<span id="imagesCount">0</span>)</h3>
                         <ul class="result-list" id="imagesList"></ul>
                     </div>
 
                     <div class="result-category" id="jsFilesResult" style="display: none;">
-                        <h3>📄 JS文件 (<span id="jsFilesCount">0</span>)</h3>
+                        <h3>JS文件 (<span id="jsFilesCount">0</span>)</h3>
                         <ul class="result-list" id="jsFilesList"></ul>
                     </div>
 
                     <div class="result-category" id="cssFilesResult" style="display: none;">
-                        <h3>🎨 CSS文件 (<span id="cssFilesCount">0</span>)</h3>
+                        <h3>CSS文件 (<span id="cssFilesCount">0</span>)</h3>
                         <ul class="result-list" id="cssFilesList"></ul>
                     </div>
 
                     <div class="result-category" id="vueFilesResult" style="display: none;">
-                        <h3>🟢 Vue文件 (<span id="vueFilesCount">0</span>)</h3>
+                        <h3> Vue文件 (<span id="vueFilesCount">0</span>)</h3>
                         <ul class="result-list" id="vueFilesList"></ul>
                     </div>
 
                     <div class="result-category" id="vueRoutesResult" style="display: none;">
-                        <h3>🛤️ Vue路由 (<span id="vueRoutesCount">0</span>)</h3>
+                        <h3>Vue路由 (<span id="vueRoutesCount">0</span>)</h3>
                         <ul class="result-list" id="vueRoutesList"></ul>
                     </div>
 
                     <div class="result-category" id="emailsResult" style="display: none;">
-                        <h3>📧 邮箱地址 (<span id="emailsCount">0</span>)</h3>
+                        <h3>邮箱地址 (<span id="emailsCount">0</span>)</h3>
                         <ul class="result-list" id="emailsList"></ul>
                     </div>
 
                     <div class="result-category" id="phoneNumbersResult" style="display: none;">
-                        <h3>📱 手机号码 (<span id="phoneNumbersCount">0</span>)</h3>
+                        <h3>手机号码 (<span id="phoneNumbersCount">0</span>)</h3>
                         <ul class="result-list" id="phoneNumbersList"></ul>
                     </div>
 
                     <div class="result-category" id="ipAddressesResult" style="display: none;">
-                        <h3>🌍 IP地址 (<span id="ipAddressesCount">0</span>)</h3>
+                        <h3>IP地址 (<span id="ipAddressesCount">0</span>)</h3>
                         <ul class="result-list" id="ipAddressesList"></ul>
                     </div>
 
                     <div class="result-category" id="sensitiveKeywordsResult" style="display: none;">
-                        <h3>⚠️ 敏感关键词 (<span id="sensitiveKeywordsCount">0</span>)</h3>
+                        <h3>敏感关键词 (<span id="sensitiveKeywordsCount">0</span>)</h3>
                         <ul class="result-list" id="sensitiveKeywordsList"></ul>
                     </div>
 
                     <div class="result-category" id="commentsResult" style="display: none;">
-                        <h3>💬 注释内容 (<span id="commentsCount">0</span>)</h3>
+                        <h3>注释内容 (<span id="commentsCount">0</span>)</h3>
                         <ul class="result-list" id="commentsList"></ul>
                     </div>
 
                     <div class="result-category" id="parametersResult" style="display: none;">
-                        <h3>⚙️ 参数名称 (<span id="parametersCount">0</span>)</h3>
+                        <h3>参数名称 (<span id="parametersCount">0</span>)</h3>
                         <ul class="result-list" id="parametersList"></ul>
                     </div>
 
                     <div class="result-category" id="credentialsResult" style="display: none;">
-                        <h3>🔐 敏感凭据 (<span id="credentialsCount">0</span>)</h3>
+                        <h3>敏感凭据 (<span id="credentialsCount">0</span>)</h3>
                         <ul class="result-list" id="credentialsList"></ul>
                     </div>
 
                     <div class="result-category" id="cookiesResult" style="display: none;">
-                        <h3>🍪 Cookie信息 (<span id="cookiesCount">0</span>)</h3>
+                        <h3>Cookie信息 (<span id="cookiesCount">0</span>)</h3>
                         <ul class="result-list" id="cookiesList"></ul>
                     </div>
 
                     <div class="result-category" id="idKeysResult" style="display: none;">
-                        <h3>🆔 ID密钥 (<span id="idKeysCount">0</span>)</h3>
+                        <h3>ID密钥 (<span id="idKeysCount">0</span>)</h3>
                         <ul class="result-list" id="idKeysList"></ul>
                     </div>
 
                     <div class="result-category" id="companiesResult" style="display: none;">
-                        <h3>🏢 公司名称 (<span id="companiesCount">0</span>)</h3>
+                        <h3>公司名称 (<span id="companiesCount">0</span>)</h3>
                         <ul class="result-list" id="companiesList"></ul>
                     </div>
 
                     <div class="result-category" id="jwtsResult" style="display: none;">
-                        <h3>🔑 JWT Token (<span id="jwtsCount">0</span>)</h3>
+                        <h3>JWT Token (<span id="jwtsCount">0</span>)</h3>
                         <ul class="result-list" id="jwtsList"></ul>
                     </div>
 
                     <div class="result-category" id="githubUrlsResult" style="display: none;">
-                        <h3>🐙 GitHub链接 (<span id="githubUrlsCount">0</span>)</h3>
+                        <h3>GitHub链接 (<span id="githubUrlsCount">0</span>)</h3>
                         <ul class="result-list" id="githubUrlsList"></ul>
                     </div>
 
                     <div class="result-category" id="bearerTokensResult" style="display: none;">
-                        <h3>🎫 Bearer Token (<span id="bearerTokensCount">0</span>)</h3>
+                        <h3>Bearer Token (<span id="bearerTokensCount">0</span>)</h3>
                         <ul class="result-list" id="bearerTokensList"></ul>
                     </div>
 
                     <div class="result-category" id="basicAuthResult" style="display: none;">
-                        <h3>🔒 基础认证 (<span id="basicAuthCount">0</span>)</h3>
+                        <h3>基础认证 (<span id="basicAuthCount">0</span>)</h3>
                         <ul class="result-list" id="basicAuthList"></ul>
                     </div>
 
                     <div class="result-category" id="authHeadersResult" style="display: none;">
-                        <h3>🔐 认证头 (<span id="authHeadersCount">0</span>)</h3>
+                        <h3>认证头 (<span id="authHeadersCount">0</span>)</h3>
                         <ul class="result-list" id="authHeadersList"></ul>
                     </div>
 
                     <div class="result-category" id="wechatAppIdsResult" style="display: none;">
-                        <h3>💬 微信AppID (<span id="wechatAppIdsCount">0</span>)</h3>
+                        <h3>微信AppID (<span id="wechatAppIdsCount">0</span>)</h3>
                         <ul class="result-list" id="wechatAppIdsList"></ul>
                     </div>
 
                     <div class="result-category" id="awsKeysResult" style="display: none;">
-                        <h3>☁️ AWS密钥 (<span id="awsKeysCount">0</span>)</h3>
+                        <h3>AWS密钥 (<span id="awsKeysCount">0</span>)</h3>
                         <ul class="result-list" id="awsKeysList"></ul>
                     </div>
 
                     <div class="result-category" id="googleApiKeysResult" style="display: none;">
-                        <h3>🔍 Google API密钥 (<span id="googleApiKeysCount">0</span>)</h3>
+                        <h3>Google API密钥 (<span id="googleApiKeysCount">0</span>)</h3>
                         <ul class="result-list" id="googleApiKeysList"></ul>
                     </div>
 
                     <div class="result-category" id="githubTokensResult" style="display: none;">
-                        <h3>🐙 GitHub Token (<span id="githubTokensCount">0</span>)</h3>
+                        <h3>GitHub Token (<span id="githubTokensCount">0</span>)</h3>
                         <ul class="result-list" id="githubTokensList"></ul>
                     </div>
 
                     <div class="result-category" id="gitlabTokensResult" style="display: none;">
-                        <h3>🦊 GitLab Token (<span id="gitlabTokensCount">0</span>)</h3>
+                        <h3>GitLab Token (<span id="gitlabTokensCount">0</span>)</h3>
                         <ul class="result-list" id="gitlabTokensList"></ul>
                     </div>
 
                     <div class="result-category" id="webhookUrlsResult" style="display: none;">
-                        <h3>🪝 Webhook URL (<span id="webhookUrlsCount">0</span>)</h3>
+                        <h3>Webhook URL (<span id="webhookUrlsCount">0</span>)</h3>
                         <ul class="result-list" id="webhookUrlsList"></ul>
                     </div>
 
                     <div class="result-category" id="idCardsResult" style="display: none;">
-                        <h3>🆔 身份证号 (<span id="idCardsCount">0</span>)</h3>
+                        <h3>身份证号 (<span id="idCardsCount">0</span>)</h3>
                         <ul class="result-list" id="idCardsList"></ul>
                     </div>
 
                     <div class="result-category" id="cryptoUsageResult" style="display: none;">
-                        <h3>🔐 加密使用 (<span id="cryptoUsageCount">0</span>)</h3>
+                        <h3>加密使用 (<span id="cryptoUsageCount">0</span>)</h3>
                         <ul class="result-list" id="cryptoUsageList"></ul>
                     </div>
                 </div>
